--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,6 +1,6 @@
 FROM quay.io/vorterx/vorterx:latest
 RUN git clone https://github.com/Vorterx/NovaBot /root/vorterx
 WORKDIR /root/vorterx/
-RUN npm install
+RUN yarn install --network-concurrency 1
 EXPOSE 9000
-CMD ["node", "core.js"]
+CMD ["npm", "start"]
