--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.3",
     "baileys": "git+https://github.com/WhiskeySockets/Baileys.git",
     "browser-id3-writer": "^4.4.0",
+    "@vitalets/google-translate-api": "^9.2.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.5.0",
     "dotenv": "^16.0.0",
@@ -40,7 +41,6 @@
     "sharp": "0.32.0",
     "simple-git": "^3.16.1",
     "sqlite3": "^5.0.11",
-    "translate-google-api": "^1.0.4",
     "youtubei.js": "6.4.1"
   }
 }
