--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sharp": "0.32.0",
     "simple-git": "^3.16.1",
     "sqlite3": "^5.0.11",
+    "yt-search": "^2.10.4",
     "youtubei.js": "6.4.1"
   }
 }
