--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs-extra": "^11.1.0",
     "google-tts-api": "^2.0.2",
     "googleapis": "^126.0.1",
+    "google-it": "^1.2.2",
     "got": "11.8.3",
     "heroku-client": "^3.1.0",
     "jimp": "^0.22.4",
