--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "google-it": "^1.2.2",
     "got": "11.8.3",
     "heroku-client": "^3.1.0",
+    "human-readable": "^0.2.1",
     "jimp": "^0.22.4",
     "link-preview-js": "^3.0.4",
     "moment": "^2.29.4",
