--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^0.5.0",
     "quick.db": "^9.1.7",
     "dotenv": "^16.0.0",
+    "discord.js": "^13.3.0",
     "file-type": "^18.2.1",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
