--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.5.0",
+    "chalk": "^4.1.2",
     "quick.db": "^9.1.7",
     "dotenv": "^16.0.0",
     "discord.js": "^13.3.0",
