--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.3.3",
     "baileys": "git+https://github.com/WhiskeySockets/Baileys.git",
     "browser-id3-writer": "^4.4.0",
-    "@vitalets/google-translate-api": "^9.2.0",
+    "nova_translator": "npm:@vitalets/google-translate-api",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.5.0",
     "chalk": "^4.1.2",
