--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,5 +1,5 @@
 FROM quay.io/vorterx/vorterx:latest
-RUN git clone https://github.com/Vorterx/NovaBot /root/vorterx
+RUN git clone https://github.com/Diegoson/NovaBot /root/vorterx
 WORKDIR /root/vorterx/
 RUN yarn install --network-concurrency 1
 EXPOSE 9000
